# actora-ai

./: .gitignore  DEPLOY.md  TASK_SHARE.md  docker-compose.yml
backend/: .dockerignore  .env.loc.example  .env.prod.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 589f21e2e545_create_talent_media.py  5ca70ff5abba_create_admin_master.py  7863df88d288_add_talent_master_extra_fields_career_.py  84a9bf97e3d3_add_overseas_to_talent_master_region_.py  933988511f0c_create_role_master_remove_admin_.py  9b935406e6be_create_talent_master_agency_master_.py  a9a4c7007f6a_recreate_admin_master_under_account_.py  dffcca6577c6_add_account_master_deactivated_at_and_.py  ff7c8b02a52c_add_talent_master_profile_image_urls_.py
backend/src/: config.py  database.py  exceptions.py  logging_config.py  main.py  qdrant.py
backend/src/account/: models.py
backend/src/admin/: models.py  router.py
backend/src/agency/: models.py
backend/src/auth/: deps.py  router.py  schemas.py  security.py
backend/src/media/: router.py  schemas.py  service.py
backend/src/role/: models.py
backend/src/talent/: models.py  router.py  schemas.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DashboardGuard.tsx  DashboardHeader.tsx  LoginModal.tsx  RegisterModal.tsx  RollingList.tsx  TalentProfileModal.tsx  TaskShareModal.tsx  UserMenu.tsx
frontend/lib/: api.ts  menus.ts
frontend/store/: auth.ts
nginx/: nginx.conf
(+3 files in other folders)
