[tool.poetry]
name = "999_Actora"
version = "0.1.0"
description = "Actora prototype — FastAPI backend"
authors = ["Samuel"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic-settings = "^2.6.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
itsdangerous = "^2.2.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
redis = "^6.4.0"
httpx = "^0.28.1"
requests = "^2.32.4"
python-multipart = "^0.0.20"
aiofiles = "^25.1.0"
python-jose = "^3.5.0"
jinja2 = "^3.1.6"
debugpy = "^1.8.17"
qdrant-client = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
